// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Track renders Track 1`] = `
<styled.div>
  <Component
    small={true}
    track={
      Object {
        "artists": Array [
          Object {
            "name": "artist",
          },
          Object {
            "name": "artist two",
          },
        ],
        "duration": 200,
        "name": "track",
        "user": Object {
          "id": "1",
        },
      }
    }
    width={40}
  />
  <TrackMeta
    artists={
      Array [
        Object {
          "name": "artist",
        },
        Object {
          "name": "artist two",
        },
      ]
    }
    name="track"
  />
  <TrackDuration
    duration={200}
  />
  <Gravatar
    email=""
    id="1"
    size={30}
  />
</styled.div>
`;

exports[`components/Track renders a pending Track if no duration (optimisticResponse) 1`] = `
<styled.div>
  <Component
    small={true}
    track={
      Object {
        "duration": 0,
        "user": Object {
          "id": "1",
        },
      }
    }
    width={40}
  />
  <TrackMeta />
  <TrackDuration
    duration={0}
  />
  <Gravatar
    email=""
    id="1"
    size={30}
  />
</styled.div>
`;
